tests/baselines/reference/funduleSplitAcrossFiles.errors.txt
funduleSplitAcrossFiles_module.ts(1,11): error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.


==== funduleSplitAcrossFiles_function.ts (0 errors) ====
    function D() { }
    
==== funduleSplitAcrossFiles_module.ts (1 errors) ====
    namespace D {
              ~
!!! error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.
        export var y = "hi";
    }
    D.y;